# scattering-demo

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json
include/glad/: glad.h
libs/efsw/: efsw.exp  efsw.lib
shaders/: depth.fs  fragment.fs  model.fs  model.vs
shaders/animation/: model.vs
shaders/blending/: blend.fs
shaders/cascade/: lightF.glsl
shaders/compute/: basic.glsl
shaders/cubemap/: cb.fs  map.fs
shaders/deferred/: gbuffer.fs  gbuffer.vs  lighting.fs
shaders/framebuffer/: frame.fs
shaders/geometry/: explode.fs  explode.gs  explode.vs  g.gs
shaders/glsl/: ad.vs
shaders/instance/: planet.vs  squares.vs
shaders/lighting/: lighting.fs
shaders/normalMap/: normal.fs  normal.vs
shaders/parallax/: parallax.fs
shaders/pbr/: basicFragment.glsl  basicVertex.glsl  brdfF.glsl  cubemapFragment.glsl  cubemapVertex.glsl  irradianceFragment.glsl  prefilterF.glsl
shaders/shadowPoints/: model.fs  model.vs
shaders/shadows/: cascadeG.glsl  render.fs  render.vs
shaders/ssr/: finalPassF.glsl  ssrF.glsl  ssrPassF.glsl
src/: CMakeLists.txt
src/assets/: animation.cpp  animation.h  asset_converter.cpp  asset_converter.h  asset_file.cpp  asset_file.h  mesh.h  model.cpp  model.h
src/core/: application.cpp  application.h
src/exes/: main.cpp
src/renderer/: base_renderer.cpp  base_renderer.h  gl_renderer.cpp  gl_renderer.h
src/shader/: shader.cpp  shader.h  update_listener.cpp  update_listener.h
src/ui/: editor.cpp  editor.h  ui.cpp  ui.h
src/utils/: camera.cpp  camera.h  common_primitives.cpp  common_primitives.h  functions.cpp  functions.h  material.cpp  material.h  paths.h  types.h
